Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119650

Model adapter/replica incompatible across different Qt versions and platforms

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.4, 6.6.2, 6.7.0 FF
    • 6.6.0, 6.6.1
    • Remote Objects
    • None
    • Linux/Wayland, Linux/X11, macOS
    • ead408ca1 (dev), 85e7b700d (6.6), 301705b80 (tqtc/lts-6.5)

      Model adapters/replicas doesn't work across different Qt versions / platforms, resulting in crashes due to unknown QVariant types and then failing to parse the data stream.

      The issue is these types:

      qRegisterMetaType<QtPrivate::ModelIndex>();
      qRegisterMetaType<QtPrivate::IndexList>();
      qRegisterMetaType<QtPrivate::DataEntries>();
      qRegisterMetaType<QtPrivate::MetaAndDataEntries>();
      

      Sometimes they get registered without the namespace (eg. "ModelIndex" instead of "QtPrivate::ModelIndex").

      Currently on Qt 6.6.1 on Linux (gcc) they register without namespace, but on macOS (clang) they register with namespace.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            nowrep David Rosca
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: