tests/auto/corelib/kernel/qmetatype/tst_qmetatype.h
@@ -120,6 +120,7 @@ private slots:
     void typesWithInaccessibleDTors();
     void voidIsNotUnknown();
     void typeNameNormalization();
+    void typeNameInQtPrivate();
 
     // Tests for deprecated APIs
 #if QT_DEPRECATED_SINCE(6, 0)
